Merge cnd changes from cnd-grgich_hills-20070623 to cnd-grgich_hills-20070711 into the trunk